--- a/static/tabs/home.html
+++ b/static/tabs/home.html
@@ -9,7 +9,7 @@
             <div class="col-md-12 col-lg-6 col-xl-8">
                 {% if video_supported %}
                 <!-- Video Container -->
-                <div id="vplayer" class="position-relative">
+                <div id="vplayer" class="position-relative" style="display: none;">
                     <video
                         class="w-100 d-block rounded-3 bg-body-tertiary"
                         playsinline
@@ -21,6 +21,11 @@
                     </video>
                     <button class="btn btn-secondary opacity-50" id="video-fs">
                         {{ macro.bi_icon("fullscreen") }}
+                    </button>
+                </div>
+                <div id="video-toggle-container" class="text-center mb-3">
+                    <button class="btn btn-primary" id="video-toggle">
+                        {{ macro.bi_icon("camera-video") }} Enable Video
                     </button>
                 </div>
                 {% else %}
